[gd_scene load_steps=5 format=2]

[ext_resource path="res://npc/desktop_ui/red_maze.png" type="Texture" id=1]
[ext_resource path="res://ui/dia_screens/dai_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/windows/lantana_desktop.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[node name="lantana_home_16x9" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -224.0
margin_bottom = -150.0
theme = ExtResource( 2 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="taskbar" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -41.0
margin_right = -6.10352e-05
margin_bottom = -3.05176e-05
rect_min_size = Vector2( 0, 41 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="taskbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = -2.99997
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Messages" type="Button" parent="taskbar/hbox"]
margin_right = 120.0
margin_bottom = 38.0
text = "Messages"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notes" type="Button" parent="taskbar/hbox"]
margin_left = 124.0
margin_right = 198.0
margin_bottom = 38.0
text = "Notes"

[node name="Files" type="Button" parent="taskbar/hbox"]
margin_left = 202.0
margin_right = 263.0
margin_bottom = 38.0
text = "Files"

[node name="spacer" type="Control" parent="taskbar/hbox"]
margin_left = 267.0
margin_right = 635.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="Time" type="Label" parent="taskbar/hbox"]
margin_left = 639.0
margin_top = 3.0
margin_right = 702.0
margin_bottom = 35.0
text = "00:00"

[node name="Exit" type="Button" parent="taskbar/hbox"]
margin_left = 706.0
margin_right = 800.0
margin_bottom = 38.0
text = "Log Out"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notes" type="Panel" parent="."]
visible = false
margin_right = 800.0
margin_bottom = 409.0

[node name="Label" type="Label" parent="notes"]
anchor_right = 1.0
margin_left = 10.0
margin_right = -40.0
margin_bottom = 32.0
text = "Notes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="notes_exit" type="Button" parent="notes"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -62.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="notes/notes_exit"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="files" type="TabContainer" parent="notes"]
margin_top = 32.0
margin_right = 800.0
margin_bottom = 409.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messages" type="VBoxContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="logout_confirm" type="ConfirmationDialog" parent="."]
margin_left = 266.842
margin_top = 141.832
margin_right = 528.842
margin_bottom = 270.832
window_title = "Logging Out"
dialog_text = "Are you sure you want to log out?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="taskbar/hbox/Messages" to="." method="_on_Messages_pressed"]
[connection signal="pressed" from="taskbar/hbox/Notes" to="." method="_on_Notes_pressed"]
[connection signal="pressed" from="taskbar/hbox/Files" to="." method="_on_Files_pressed"]
[connection signal="pressed" from="taskbar/hbox/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="notes/notes_exit" to="." method="hide_ui"]
[connection signal="confirmed" from="logout_confirm" to="." method="on_exit"]
